updated to version 1.2.0.2446

--- a/src/compiler/translator_common_winrt.vcxproj.filters
+++ b/src/compiler/translator_common_winrt.vcxproj.filters
@@ -137,6 +137,9 @@
     <ClCompile Include="DetectCallDepth.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InitializeGLPosition.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseTypes.h">
@@ -257,6 +260,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DetectCallDepth.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InitializeGLPosition.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
