--- a/src/compiler/translator_common_winrt.vcxproj
+++ b/src/compiler/translator_common_winrt.vcxproj
@@ -264,6 +264,7 @@
     <ClCompile Include="InfoSink.cpp" />
     <ClCompile Include="Initialize.cpp" />
     <ClCompile Include="InitializeDll.cpp" />
+    <ClCompile Include="InitializeGLPosition.cpp" />
     <ClCompile Include="InitializeParseContext.cpp" />
     <ClCompile Include="Intermediate.cpp" />
     <ClCompile Include="intermOut.cpp" />
@@ -356,6 +357,7 @@
     <ClInclude Include="Initialize.h" />
     <ClInclude Include="InitializeDll.h" />
     <ClInclude Include="InitializeGlobals.h" />
+    <ClInclude Include="InitializeGLPosition.h" />
     <ClInclude Include="InitializeParseContext.h" />
     <ClInclude Include="intermediate.h" />
     <ClInclude Include="localintermediate.h" />
