--- a/src/compiler/translator_common_phone.vcxproj
+++ b/src/compiler/translator_common_phone.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Initialize.h" />
     <ClInclude Include="InitializeDll.h" />
     <ClInclude Include="InitializeGlobals.h" />
+    <ClInclude Include="InitializeGLPosition.h" />
     <ClInclude Include="InitializeParseContext.h" />
     <ClInclude Include="intermediate.h" />
     <ClInclude Include="localintermediate.h" />
@@ -213,6 +214,7 @@
     <ClCompile Include="InfoSink.cpp" />
     <ClCompile Include="Initialize.cpp" />
     <ClCompile Include="InitializeDll.cpp" />
+    <ClCompile Include="InitializeGLPosition.cpp" />
     <ClCompile Include="InitializeParseContext.cpp" />
     <ClCompile Include="Intermediate.cpp" />
     <ClCompile Include="intermOut.cpp" />
